# Katakana-to-Romaji-Converterv-1.1

./: README.md
PythonProject/: main.py  pyproject.toml
PythonProject/romkan/: main.py  pyproject.toml
